--- a/README
+++ b/README
@@ -1,7 +1,13 @@
 # José Tomás
 ## Liberona G.
 
-__el miedo mata la mente__
+* “No conoceréis al miedo. El miedo mata la mente.
+El miedo es la pequeña muerte que conduce a la destrucción total.
+Afrontaré mi miedo.
+Permitiré que pase sobre mi y a través de mi. Y cuando haya pasado, giraré mi ojo interior para escrutar su camino.
+Allá donde haya pasado el miedo ya no habrá nada. Sólo estaré yo.” *
+
+La letania contra el miedo - Bene Gesserit.
 ---
 
 
